# ProgrammingAutomation

./: CMakeLists.txt  README.md
createclass/cpp/: .gitignore  CMakeLists.txt  Key.txt  Readme.md  TODO.txt
createclass/cpp/include/: Data.hpp  Enum.hpp  File.hpp  Inherit.hpp  Interface.hpp  Parse.hpp  Standard.hpp
createclass/cpp/resources/: HeaderTemplate.txt  SourceTemplate.txt
createclass/cpp/src/: File.cpp  Inherit.cpp  Interface.cpp  Parse.cpp  Standard.cpp  main.cpp
